# simulador_de_circuito_rc

./: LICENSE.txt  README.md  pyproject.toml
docs/: conf.py  index.rst  simulador.rst
images/: .gitignore
src/simulador_de_circuito_rc/: __about__.py  __init__.py  simulador.py
tests/: test_simulador.py
