[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simulador-de-circuito-rc" 
dynamic = ["version"]
description = "Realiza a simulação de um circuito elétrico com resistor e capacitor"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["circuito elétrico", "simulador"]
authors = [
  { name = "Matheus", email = "matheus.venturini@acad.ufsm.br" },
]
dependencies = [
    "pyqt5",
    "matplotlib",
    "numpy",
]

[tool.hatch.version]
path = "src/simulador_de_circuito_rc/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "ruff",
    "mypy",
    "sphinx",
    "myst-parser" # Para usar Markdown com o Sphinx. Neste projeto não será usado, mas vou deixar incluso apneas por acaso.
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/simulador_de_circuito_rc tests}"

[tool.coverage.run]
source_pkgs = ["simulador_de_circuito_rc", "tests"]
branch = true
parallel = true
omit = [
  "src/simulador_de_circuito_rc/__about__.py",
]

[tool.coverage.paths]
simulador_de_circuito_rc = ["src/simulador_de_circuito_rc", "*/simulador-de-circuito-rc/src/simulador_de_circuito_rc"]
tests = ["tests", "*/simulador-de-circuito-rc/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
ignore_missing_imports = 1 # Necessário porque o Matplotlib não possui um arquivo de compatibilidade com o Mypy

